DASH-549 Fix input paddings for wrap tokens and domains public address field.

--- a/client/src/components/Input/Input.module.scss
+++ b/client/src/components/Input/Input.module.scss
@@ -440,6 +440,24 @@
         padding-right: 0;
       }
     }
+
+    &.connectWallet {
+      padding-right: 120px;
+
+      &.hasPasteButton {
+        padding-right: 150px;
+      }
+
+      input[data-clear='true'] {
+        padding-right: 0;
+      }
+    }
+
+    &.isWalletConnected {
+      input[data-clear='true'] {
+        padding-right: 0;
+      }
+    }
   }
 }
 
